    - Use dh_prep instead of deprecated “dh_clean -k”.
  * Bump Standards-Version to 3.9.2 (no changes needed).
  * Generate filenames following current conventions on “dpkg-split --join”,
    by including the architecture in the debian-split member of a split
    package and using underscores to separate filename parts.
  * Support conffiles with spaces when diffing them. Closes: #147583

  [ Updated man page translations ]
  * German (Helge Kreutzmann).

  [ Updated scripts translations ]
  * German (Helge Kreutzmann).

 -- Raphaël Hertzog <hertzog@debian.org>  Sat, 02 Apr 2011 09:21:26 +0200

dpkg (1.16.0.2) unstable; urgency=high

  * Fix dpkg-split --auto to not fail when opening the new depot file.
  * Fix dpkg-split to correctly set the last part split size.
  * Fix build failure on DEB_BUILD_OPTIONS=noopt due to a missing <locale.h>
    include in gettext.h needed by the gettext context functions.

 -- Guillem Jover <guillem@debian.org>  Sat, 16 Apr 2011 00:14:15 +0200

dpkg (1.16.0.1) unstable; urgency=low

  [ Raphaël Hertzog ]
  * Fix regression affecting dpkg -R. Closes: #620636
  * Don't fail during unpack if the system doesn't support changing timestamps
    of symlinks. Closes: #620679

 -- Guillem Jover <guillem@debian.org>  Tue, 05 Apr 2011 07:28:20 +0200

dpkg (1.16.0) unstable; urgency=low

  [ Guillem Jover ]
  * Use DPKG_MAINTSCRIPT_PACKAGE environment variable as package name on
    dpkg-divert when no --package or --local options have been specified.
  * Do not allow versions starting with non-digit when doing strict parsing,
    warn otherwise.
  * Update dpkg(1) to note that --status-fd output does not contain newlines
    in error messages anymore (this was fixed in 1.15.0).
  * Add a new --status-logger option to dpkg, similar to --status-fd but
    instead invoke the command ourselves and feed the status information
    to its standard input. Suggested by Raphaël Hertzog.