@@ -465,6 +465,9 @@ losing data, use with care.\fP
 \fBarchitecture\fP:
 Process even packages with wrong or no architecture.
 
+\fBbad\-version\fP:
+Process even packages with wrong versions.
+
 \fBbad\-path\fP:
 \fBPATH\fP is missing important programs, so problems are likely.
 
