@@ -30,6 +30,8 @@ dpkg (1.16.1) UNRELEASED; urgency=low
     by including the architecture in the debian-split member of a split
     package and using underscores to separate filename parts.
   * Support conffiles with spaces when diffing them. Closes: #147583
+  * Allow installing packages with bogus versions with new
+    --force-bad-version.
 
   [ Updated man page translations ]
   * German (Helge Kreutzmann).
